--- a/package.json
+++ b/package.json
@@ -9,17 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.18",
     "@types/node": "20.11.28",
     "@types/react": "18.2.66",
     "@types/react-dom": "18.2.22",
     "autoprefixer": "10.4.18",
+    "axios": "^1.6.8",
     "eslint": "8.57.0",
     "eslint-config-next": "14.1.3",
     "next": "14.1.3",
     "postcss": "8.4.35",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.4.1",
+    "tailwindcss": "^3.4.1",
     "typescript": "5.4.2"
+  },
+  "devDependencies": {
+    "daisyui": "^4.7.3"
   }
 }
