--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "next": "14.1.3",
     "postcss": "8.4.35",
     "react": "18.2.0",
+    "react-datepicker": "^6.5.0",
     "react-dom": "18.2.0",
     "react-toastify": "^10.0.5",
     "tailwindcss": "^3.4.1",
     "typescript": "5.4.2"
   },
   "devDependencies": {
+    "@types/react-datepicker": "^6.2.0",
     "daisyui": "^4.7.3"
   }
 }
